# ymir-libretro

./: CMakeLists.txt  libretro.cpp  ymir_libretro.cpp
.github/workflows/: build-windows.yml
libs/ymir-core/include/ymir/hw/smpc/peripheral/: peripheral_impl_control_pad.hpp
